--- a/InterviewQuestions.DataStructures.Tests/InterviewQuestions.DataStructures.Tests.csproj
+++ b/InterviewQuestions.DataStructures.Tests/InterviewQuestions.DataStructures.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DFD262B1-D7AF-4E89-8B2C-9B86318D31DA}</ProjectGuid>
+    <ProjectGuid>{49C824A6-42E5-4074-BE53-38314F85B1AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InterviewQuestions.Tests</RootNamespace>
-    <AssemblyName>InterviewQuestions.Tests</AssemblyName>
+    <RootNamespace>InterviewQuestions.DataStructures.Tests</RootNamespace>
+    <AssemblyName>InterviewQuestions.DataStructures.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,17 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditStepLadderTests.cs" />
+    <Compile Include="MinHeapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="KthSmallestElementTests.cs" />
+    <Compile Include="MaxHeapTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InterviewQuestions\InterviewQuestions.csproj">
-      <Project>{a0bf4f46-52cc-44dc-9e5e-dda508eb8160}</Project>
-      <Name>InterviewQuestions</Name>
+    <ProjectReference Include="..\InterviewQuestions.DataStructures\InterviewQuestions.DataStructures.csproj">
+      <Project>{9548f8a8-a9bb-42b5-bc88-f5108dede98e}</Project>
+      <Name>InterviewQuestions.DataStructures</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
