--- a/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
+++ b/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A0BF4F46-52CC-44DC-9E5E-DDA508EB8160}</ProjectGuid>
+    <ProjectGuid>{9548F8A8-A9BB-42B5-BC88-F5108DEDE98E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InterviewQuestions</RootNamespace>
-    <AssemblyName>InterviewQuestions</AssemblyName>
+    <RootNamespace>InterviewQuestions.DataStructures</RootNamespace>
+    <AssemblyName>InterviewQuestions.DataStructures</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditStepLadder.cs" />
-    <Compile Include="KthSmallestElement.cs" />
+    <Compile Include="Heap.cs" />
+    <Compile Include="MaxHeap.cs" />
+    <Compile Include="MinHeap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\InterviewQuestions.DataStructures\InterviewQuestions.DataStructures.csproj">
-      <Project>{9548f8a8-a9bb-42b5-bc88-f5108dede98e}</Project>
-      <Name>InterviewQuestions.DataStructures</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
