Added merge-sort and two-sum problem. Unit tests included.

--- a/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
+++ b/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
@@ -51,6 +51,8 @@
     <Compile Include="EditStepLadderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KthSmallestElementTests.cs" />
+    <Compile Include="TwoSumTests.cs" />
+    <Compile Include="MergeSortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
