--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="EditStepLadder.cs" />
     <Compile Include="KthSmallestElement.cs" />
+    <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoSum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterviewQuestions.DataStructures\InterviewQuestions.DataStructures.csproj">
