--- a/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
+++ b/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Heap.cs" />
     <Compile Include="MaxHeap.cs" />
     <Compile Include="MinHeap.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
