--- a/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
+++ b/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
@@ -51,9 +51,11 @@
     <Compile Include="EditStepLadderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KthSmallestElementTests.cs" />
+    <Compile Include="TestUtilities.cs" />
     <Compile Include="TwoSumTests.cs" />
     <Compile Include="MergeSortTests.cs" />
     <Compile Include="ReverseLinkedListTests.cs" />
+    <Compile Include="QuickSortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
