--- a/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
+++ b/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphEdge.cs" />
+    <Compile Include="GraphNode.cs" />
     <Compile Include="Heap.cs" />
     <Compile Include="MaxHeap.cs" />
     <Compile Include="MinHeap.cs" />
