--- a/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
+++ b/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EditStepLadderTests.cs" />
+    <Compile Include="MedianTwoSortedArraysTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KthSmallestElementTests.cs" />
     <Compile Include="TestUtilities.cs" />
