--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DijkstrasAlgorithm.cs" />
     <Compile Include="EditStepLadder.cs" />
     <Compile Include="KthSmallestElement.cs" />
+    <Compile Include="MedianTwoSortedArrays.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSort.cs" />
