--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="EditStepLadder.cs" />
     <Compile Include="KthSmallestElement.cs" />
     <Compile Include="MedianTwoSortedArrays.cs" />
+    <Compile Include="MergeKIntervals.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSort.cs" />
