Added change making problem (both minimum change and permutation versions) and unit tests. Simplified logic in MergeKIntervals.

--- a/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
+++ b/InterviewQuestions.Tests/InterviewQuestions.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoinChangeTests.cs" />
     <Compile Include="EditStepLadderTests.cs" />
     <Compile Include="MedianTwoSortedArraysTests.cs" />
     <Compile Include="MergeKIntervalsTests.cs" />
