--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoinChange.cs" />
     <Compile Include="DijkstrasAlgorithm.cs" />
     <Compile Include="EditStepLadder.cs" />
     <Compile Include="KthSmallestElement.cs" />
