Added Dijkstra's Algorithm and validation of BST. Unit tests have not yet been made.

--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -51,6 +51,7 @@
     <Compile Include="QuickSort.cs" />
     <Compile Include="ReverseLinkedList.cs" />
     <Compile Include="TwoSum.cs" />
+    <Compile Include="ValidateBinarySearchTree.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterviewQuestions.DataStructures\InterviewQuestions.DataStructures.csproj">
