--- a/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
+++ b/InterviewQuestions.DataStructures/InterviewQuestions.DataStructures.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MinHeap.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
